2009-09-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-content-type-alist): Support
	`browse-url-default-windows|macosx-browser'. Thanks to Leo.
	Cf. [emacs-w3m:11035].

	* w3m-ems.el (w3m-form-button, w3m-form-button-mouse)
	(w3m-form-button-pressed, w3m-tab-unselected)
	(w3m-tab-unselected-retrieving, w3m-tab-unselected-unseen)
	(w3m-tab-selected, w3m-tab-selected-retrieving, w3m-tab-background)
	(w3m-tab-selected-background, w3m-tab-mouse): Add type ns. Thanks to
	Leo. Cf. [emacs-w3m:11034].

2009-08-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-toggle-inline-images-internal): Do not display image, if
	its url is local and current url is not local.

2009-08-24  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-output-coding-system): Use `utf-8' except for emacs-21
	under Japaese environment.

2009-08-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-use-symbol): Set nil with emacs-23 or later.
	cf. [emacs-w3m:11002].

2009-08-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-util.el (w3m-puny-decode-url): Decode the part of hostname only.
	Add doc-strings.
	(w3m-puny-encode-url): Add doc-strings.

2009-08-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-puny-utf-16be): New variable.
	(w3m-url-readable-string): Call `w3m-puny-decode-url'.
	(w3m-url-transfer-encode-string): Call `w3m-puny-encode-url'.
	(w3m-header-line-insert): Call `w3m-puny-decode-url'.
	(w3m-input-url): Call `w3m-puny-decode-url' for initial URL.

	* w3m-util.el (top): Add the variable definition of `w3m-puny-utf-16be'
	to avoid byte-compile warnings.
	(w3m-puny-code-regex, w3m-puny-code-nonascii, w3m-puny-base)
	(w3m-puny-tmin, w3m-puny-tmax, w3m-puny-damp, w3m-puny-skew)
	(w3m-puny-initial-bias, w3m-puny-initial-n, w3m-puny-delimiter): New
	constants.
	(w3m-puny-adapt, w3m-puny-decode-digit, w3m-puny-encode-digit)
	(w3m-puny-decode1, w3m-puny-decode, w3m-puny-decode-url)
	(w3m-puny-encode1, w3m-puny-encode, w3m-puny-encode-url): New
	functions.
